--- a/themes/neopoligen-v0.1.0/files/styles/theme.css
+++ b/themes/neopoligen-v0.1.0/files/styles/theme.css
@@ -65,7 +65,7 @@ body {
 
 .cli-wrapper {
   font-size: var(--size-8);
-  padding: 0.3rem;
+  padding: 0.5rem;
   background-color: var(--color-black-30);
   border: 1px solid var(--color-bravo-10);
   border-radius: 0.3rem;
@@ -74,7 +74,7 @@ body {
 .code-block {
   font-size: var(--size-8);
   margin-left: 3rem;
-  padding-left: 0.3rem;
+  padding-left: 0.5rem;
   padding-top: 0.7rem;
   border-left: 1px solid var(--color-delta);
   background-color: var(--color-black-30);
@@ -92,7 +92,7 @@ body {
   color: var(--color-bravo-60);
   font-family: monospace;
   font-size: var(--size-8);
-  padding: 0.3rem;
+  padding: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -101,7 +101,7 @@ body {
   background-color: var(--color-black-30);
   border: 1px solid var(--color-bravo-10);
   border-radius: 0.3rem;
-  padding: 0.4rem;
+  padding: 0.5rem;
 }
 
 .fin-token {
@@ -209,6 +209,27 @@ img {
     padding-right: 2.7ch;
     text-align: end;
     width: 7.5ch;
+}
+
+.link-block {
+  padding: 0.5rem;
+}
+
+.link-title {
+  border-bottom: 1px solid var(--color-bravo-20);
+  color: var(--color-bravo-60);
+  font-family: monospace;
+  font-size: var(--size-8);
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.link-wrapper {
+  font-size: var(--size-5);
+  padding: 0.3rem;
+  background-color: var(--color-black-30);
+  border: 1px solid var(--color-bravo-10);
+  border-radius: 0.3rem;
 }
 
 main {
