--- a/themes/neopoligen-v0.1.0/files/styles/theme.css
+++ b/themes/neopoligen-v0.1.0/files/styles/theme.css
@@ -80,11 +80,15 @@ body {
   background-color: var(--color-black-30);
   border-top-right-radius: 0.3rem;
   border-bottom-right-radius: 0.3rem;
+  overflow-wrap: break-word;
+  white-space: pre-wrap; 
 }
 
 .code-block-no-nums {
   padding: 0.8rem;
   background-color: var(--color-black-30);
+  overflow-wrap: break-word;
+  white-space: pre-wrap; 
 }
 
 .code-title {
